--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -118,6 +118,7 @@ footer
 		text-align center
 	@media screen and (max-width 425px)
 		margin-top: 45px
+		line-height: 1.1
 		&-main
 			margin-top: 20px
 			font-size: 16px
