--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -1,10 +1,11 @@
 #main
 	padding  0 0 60px
-	background: #252A26 url(../img/backs/main.png) no-repeat center center
-	background-size: cover
-	color #fff
-	@media screen and (max-width 650px)
-		background-image: url(../img/backs/main-mob.png)
+	// background: #252A26 url(../img/backs/main.png) no-repeat center center
+	// background-size: cover
+	color #73431F
+// .content-main
+// 	@media screen and (max-width 550px)
+// 		margin-bottom: 50px
 .main
 	&-pre
 		font-size: 28px
@@ -12,70 +13,99 @@
 		border-bottom: 2px solid #55B196
 		padding-bottom: 5px
 		margin-top: 0
+		color #55B196
 		@media screen and (max-width 991px)
 			margin-top: 0
-		@media screen and (max-width 650px)
 			font-size: 22px
-		@media screen and (max-width 480px)
+		@media screen and (max-width 650px)
 			font-size: 20px
-		@media screen and (max-width 425px)
-			font-size: 14px
+		@media screen and (max-width 550px)
+			padding-bottom: 0
+			padding-top: 5px
+		// @media screen and (max-width 425px)
+		// 	font-size: 14px
 	&-title
 		font-family: I
 		font-size: 28px
 		text-transform none
-		margin 30px 0
-		@media screen and (max-width 650px)
+		margin 10px 0 20px
+		line-height: 1.1
+		@media screen and (max-width 1199px)
 			font-size: 22px
-		@media screen and (max-width 480px)
+		@media screen and (max-width 991px)
+			width 45%
+		@media screen and (max-width 650px)
 			font-size: 20px
+		@media screen and (max-width 550px)
+			width 100%
+			padding-top: 10px
+		@media screen and (max-width 500px)
+			width 90%
 		@media screen and (max-width 425px)
-			margin-top: 10px
-			font-size: 16px
-			margin-bottom: 10px
+			color #000
+			font-size: 14px
 		span
 			font-family: FSE
 			font-size: 48px
 			text-transform uppercase
 			position relative
 			display block
-			padding-top: 5px
-			@media screen and (max-width 650px)
+			&:first-of-type
+				padding-top: 5px
+				left -30px
+				@media screen and (max-width 1199px)
+					left -20px
+				@media screen and (max-width 650px)
+					left 0
+			@media screen and (max-width 1199px)
 				font-size: 38px
-			@media screen and (max-width 480px)
+			@media screen and (max-width 650px)
 				font-size: 30px
 			@media screen and (max-width 425px)
-				font-size: 18px
-			&:before
-				content: '”'
-				display block
-				position absolute
-				top 5px
-				left -30px
-				@media screen and (max-width 650px)
-					position relative
-					top 0
-					display inline
-					left 0
+				font-size: 24px
+			// &:before
+			// 	content: '”'
+			// 	display block
+			// 	position absolute
+			// 	top 5px
+			// 	left -30px
+			// 	@media screen and (max-width 991px)
+			// 		left: -20px
+			// 	@media screen and (max-width 650px)
+			// 		position relative
+			// 		top 0
+			// 		display inline
+			// 		left 0
 	&-date
 		font-size: 24px
 		font-weight: 900
 		color #55B196
 		line-height: 52px
-		@media screen and (max-width 480px)
+		@media screen and (max-width 650px)
 			font-size: 22px
+		@media screen and (max-width 550px)
+			width 270px
+			margin: 45px 0 110px
+			color #3F8771
+		@media screen and (max-width 500px)
+			margin-bottom: 55px
 		@media screen and (max-width 425px)
+			margin 30px 0
+			font-size: 18px
+			line-height: 1.1
+		@media screen and (max-width 360px)
 			font-size: 16px
-			line-height: 44px
 		span
 			display inline-block
 			&:last-of-type
+				// border-left: 2px solid #55B196
 				margin-left: 20px
 				padding-left: 20px
 				position relative
-				@media screen and (max-width 425px)
-					margin-left: 10px
-					padding-left: 10px
+				@media screen and (max-width 550px)
+					display block
+					padding: 10px 0 0
+					margin 10px 0 0
 				&:before
 					content: ''
 					display block
@@ -84,38 +114,123 @@
 					left 0
 					height: 100%
 					width 2px
-					background-color #fff
+					background-color #55B196
+					@media screen and (max-width 550px)
+						top 0
+						left 0
+						width 52px
+						height: 2px
+						background-color: #3F8771
+					@media screen and (max-width 425px)
+						width 30px
 	&-text
 		display flex
 		flex-direction: row
 		align-items: center
 		width 100%
 		max-width 460px
-		margin 20px 0 60px
-		@media screen and (max-width 650px)
-			max-width none
-		@media screen and (max-width 480px)
+		margin 20px 0 0
+		// @media screen and (max-width 650px)
+		// 	max-width none
+		@media screen and (max-width 550px)
 			margin-top: 40px
+			width 370px
+			max-width none
+			border-top-right-radius: 15px
+			border-bottom-right-radius: 15px
+			background-color rgba(#fff, .8)
+			padding: 25px
+			margin-bottom: 45px
+			left -15px
 		@media screen and (max-width 425px)
-			margin: 20px 0 15px
+			// margin: 20px 0 15px
 			align-items: flex-start
+			width 285px
+			position relative
+			left -15px
+			margin-bottom: 0
+		@media screen and (max-width 385px)
+			margin-top: 25px
+		@media screen and (max-width 360px)
+			margin-bottom: 40px
 		img
 			margin-right: 20px
-			@media screen and (max-width 480px)
-				width 80px
+			@media screen and (max-width 991px)
+				width 60px
+				margin-right: 10px
 			@media screen and (max-width 425px)
 				width 30px
 				margin-right: 10px
 		p
 			font-size: 18px
 			margin-top: -22px
+			@media screen and (max-width 991px)
+				margin-top: -12px
 			@media screen and (max-width 650px)
 				font-size: 22px
-			@media screen and (max-width 480px)
-				font-size: 20px
-			@media screen and (max-width 425px)
 				font-size: 16px
 				margin-top: -7px
 				line-height: 1.2
+			@media screen and (max-width 425px)
+				font-size: 16px
 			span
 				font-weight: bold
+	&-img
+		position absolute
+		top 0
+		right 0
+		z-index -1
+		@media screen and (max-width 991px)
+			width 45%
+		@media screen and (max-width 550px)
+			display none
+		&-mob
+			display none
+			@media screen and (max-width 550px)
+				display block
+				position relative
+				width 100%
+				margin 0 auto 50px
+				z-index -1
+				height: 540px
+				object-fit: none
+				object-position: top left
+			@media screen and (max-width 425px)
+			// 	height: 350px
+			// @media screen and (max-width 360px)
+				display none
+		&-mob-2
+			display none
+			@media screen and (max-width 425px)
+				display block
+				position relative
+				width 550px
+				margin 0 auto
+				z-index -1
+.mob-img-wrapper
+	@media screen and (max-width 991px)
+		display flex !important
+		flex-direction: row
+		justify-content: center
+		align-items: center
+		flex-wrap: nowrap
+		position absolute
+		top 50px
+		left 0
+		right 0
+		margin 0 auto
+	@media screen and (max-width 425px)
+		min-height: 397px
+		top 40px
+.general-subtitle-main
+	font-size: 18px
+	margin-top: 40px
+	@media screen and (max-width 550px)
+		margin-top: 25px
+	span
+		text-transform none
+		color inherit
+	@media screen and (max-width 425px)
+		margin-top: 20%
+.main-info
+	position relative
