Course page is typeseted

--- a/_app/2.pug
+++ b/_app/2.pug
@@ -1,4 +1,4 @@
--var path = '';
+-var path = '../';
 -var head_url = '';
 -var head_title = 'Проективный метод современной психологии: Метафорические ассоциативные карты”';
 -var head_description = '5-ти дневный онлайн-практикум Жанны Абрамовой';
@@ -19,7 +19,7 @@
 -var href = 'javascript:void(0);';
 
 mixin b(cl,href,p)
-	a.button(class=cl href=href onclick="awoOpenFormModal(37)")!=p
+	a.button(class=cl href=href onclick="awoOpenFormModal(59)")!=p
 mixin img(cl,src,alt)
 	img(class=cl src!=src alt=alt)
 mixin gt(cl,h3)
@@ -55,6 +55,6 @@ html(lang="ru")
 			include pug/main/7-revs
 		include pug/base/2-footer
 		include pug/base/3-scripts
-		<script src="https://shop.iomp.ru/?r=fp/admin/getformscript&id=37&vc=536853ff5ba5bdba63b77d744f9d7f15&popup=1&hideButton=1"></script>
+		<script src="https://shop.iomp.ru/?r=fp/admin/getformscript&id=59&vc=edb97d5cc5eaf4f90f470c26e796c819&popup=1&hideButton=1"></script>
 		include pug/scripts/chat
 		include pug/scripts/body_bottom_scripts
