--- a/_app/pug/main/3-video.pug
+++ b/_app/pug/main/3-video.pug
@@ -1,6 +1,6 @@
 section#video
 	.container
-		.video-wrapper.video-wrapper-video(data-youtube='wL8DVHuWI7Y' )
+		.video-wrapper.video-wrapper-video(data-youtube='UlC7lV-AyKw' )
 			div
 			//- +img('', 'img/images/video.png', 'Видео')
 		h4.general-subtitle Зарегистрируйтесь прямо сейчас и получите 
