--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -231,6 +231,8 @@
 		text-transform none
 		color inherit
 	@media screen and (max-width 425px)
-		margin-top: 20%
+		margin-top: 15%
+	@media screen and (max-width 386px)
+		margin-top: 12%
 .main-info
 	position relative
