Course styling part 1

--- a/_app/pug/base/1-header-course.pug
+++ b/_app/pug/base/1-header-course.pug
@@ -1,16 +1,18 @@
 header
 	a(href="https://iomp.ru", target="_blank")
-		img.header-logo(src=path+"img/images/logo-black.svg", alt="Логотип")
-	//- .header-menu
-	//- 	ul.header-menu-list
-	//- 		li
-	//- 			a(href='#about') Польза диагностики
-	//- 		li
-	//- 			a(href='#plan') Программа диагностики
-	//- 		li
-	//- 			a(href='#authors') Эксперт
-	//- 		li
-	//- 			a(href='#revs') Отзывы
+		img.header-logo(src=path+"img/images/logo-1.svg", alt="Логотип")
+	.header-menu
+		ul.header-menu-list
+			li
+				a(href='#for') Для кого
+			li
+				a(href='#why') Почему мы
+			li
+				a(href='#plan') Программа курса
+			li
+				a(href='#prices') Тарифы
+			li
+				a(href='#revs') Отзывы
 	//- .mobile-menu
 	//- 	.mobile-menu-line.mobile-menu-line-1
 	//- 	.mobile-menu-line.mobile-menu-line-2
