--- a/_app/pug/course/1-main.pug
+++ b/_app/pug/course/1-main.pug
@@ -1,8 +1,9 @@
 section#main
 	.container
-		include ../base/1-header
+		include ../base/1-header-course
 		.content
 			p.main-pre Программа профессиональной переподготовки с&nbsp;выдачей диплома
 			h1.main-title МЕТАФОРИЧЕСКИЕ АССОЦИАТИВНЫЕ КАРТЫ
-			h2.main-subtitle Забронируйте место на&nbsp;курсе сегодня и получите грант на&nbsp;обучение 50&nbsp;000&nbsp;рублей.
+			h2.main-subtitle Забронируйте место на&nbsp;курсе сегодня и получите грант на&nbsp;обучение 
+				span 50&nbsp;000&nbsp;рублей.
 			+b('', href, 'Выбрать тариф')
