--- a/_app/pug/course/3-plan.pug
+++ b/_app/pug/course/3-plan.pug
@@ -1,8 +1,9 @@
 .black-wrapper
 	section#why
 		.container
-			h3.general-title Почему 
+			h3.general-title.general-title-white Почему 
 				span именно наш институт
+				br.mob-none
 				|  нужно выбрать для обучения
 			.why-items
 				p.why-item Опыт создания обучающих систем, проверенный временем
@@ -17,73 +18,80 @@
 		.container
 			.plan-wrapper
 				+img('', 'img/backs/course-plan.png', 'План курса')
-				h3.plan-title Программа курса
-				p.plan-text Программа дипломного курса из&nbsp;53 видео-уроков:продолжительность каждого урока - 2-3&nbsp;часа
+				.plan-wrapper-title
+					h3.general-title.general-title-white.general-title-plan Программа курса
+					p.plan-text Программа дипломного курса из&nbsp;53 видео-уроков:
+						br
+						| продолжительность каждого урока - 2-3&nbsp;часа
 				+b('plan-button', '#!', 'Подробнее')
-			ul.general-list.general-list-white
-				li Предварительный урок. Классификация колод. Техника безопасности. Практика Денежный потолок. Игра. Препятствия и возможности.
-				li Формирование штампа судьбы. Как формируется судьба человека.
-				li Саботаж. Вторичные выгоды неудач. Почему нам «выгодно» проживать проблемы
-				li Ролевые игры в&nbsp;паре. Треугольник «Тиран-Жертва-Спасатель»
-				li Мужчина по&nbsp;судьбе/под задачу. Что влияет на&nbsp;наш выбор партнера
-				li Ответы на&nbsp;часто задаваемые вопросы.
-				li Любовный треугольник. Завершение прошлых связей. Манипуляции. Виды и принципы манипулятивных игр.
-				li Личные границы. Кто есть Я? Как формируется наша идентичность.
-				li Денежный потолок. Работа с&nbsp;денежной составляющей. Как формируются деньги в&nbsp;нашем пространстве.
-				li Проработка причин, влияющих на&nbsp;низкий уровень финансов. Провальные финансовые стратегии.
-				li Дополнительный урок    Закрытый тренинг для&nbsp;учеников Жанны Абрамовой
-				li Мнемотехники (как быстрее и эффективнее усваивать материал). Ответы на&nbsp;часто задаваемые вопросы
-				li Травмы детства. Исцеление детского страха.
-				li Принцип отправной точки травм. Где и когда сформировались истинные причины наших проблем. Психосоматозы (болезни, основанные на&nbsp;психотравме)
-				li Родительско-детские конфликты. Жизнь подростка. Травмы пубертатного периода, влияющие на&nbsp;формирование судьбы. Созависимость. Симбиоз. Сепарация.
-				li Повторение маминой судьбы. Зачем мы живем? Коллаж болезней. Принцип метафизики (заболеваний).
-				li Основные законы функционирования семейных систем.
-				li Блоки, влияющие на&nbsp;судьбу. Слепые пятна. Воронки
-				li Работа с&nbsp;родовыми блоками. Фразы расколдовыватели
-				li Инцест. Аборт.
-				li Причины возникновения бесплодия. Закрытие абортированного поля.
-				li Системно-родовая терапия в&nbsp;работе с&nbsp;отношениями.
-				li Деньги в&nbsp;паре
-				li Бедность как&nbsp;ресурс. Ключ к&nbsp;деньгам в&nbsp;паре.
-				li Долги и кредиты.
-				li Бизнес
-				li Работа с&nbsp;травмой
-				li Исцеление травм
-				li Работа с&nbsp;заболеваниями
-				li Нерожденные дети
-				li Выстраивание системного поля
-				li Техники исцеления ДНК
-				li Нейтрализация деструктивных программ
-				li Основы инфобизнеса. Целевая аудитория. Робота с&nbsp;продуктом
-				li Типажи. Особенности типажей. Точка входа в&nbsp;типажный голод
-				li Написание программы тренинга. Подготовка квеста/марафона
-				li Учимся простраивать причино-следственную связь проблематики через квест/марафон
-				li Тренировка составления программы: от&nbsp;мысли до&nbsp;проведения тренинга. Пошаговая инструкция для&nbsp;нейтрализации симптома (страха)
-				li Работа с&nbsp;фобиями. Техники МАК: Лояльность к&nbsp;системе, Кармические задачи
-				li Поиск СКО (отправной точки)
-				li Исцеление шаблона: Восстановление силы
-				li Работа с&nbsp;провальными инстинктами
-				li Работа с&nbsp;физическими симптомами
-				li Коуч сессия
-				li Коуч сессия — работа с&nbsp;саботажем
-				li Работа с&nbsp;саботажем
-				li Инфобизнес
-				li Составление программы продающего мастер класса
-				li Как проводить продающий мастер класс
-				li Продажи на&nbsp;вебинарах
-				li Подготовка к&nbsp;запуску МК и платного курса
-				li Составление своих авторских техник работы с&nbsp;МАК
-				li Работа с&nbsp;клиентом по&nbsp;моделированию жизни. Присоединение и ведение клиента
-				li Демо-сессия по&nbsp;технике Квантовый скачок из&nbsp;проблемы в&nbsp;ресурсное состояние
-				li Технология антикризис. Работа с&nbsp;клиентом по&nbsp;запросу о&nbsp;деньгах. Денежный уровень человека
-				li Новые тенденции написания тренингов в&nbsp;период кризиса
-		.plan-filling
 			.row
-				.col-md-6
-					h4.plan-filling-title В&nbsp;обучение входит
-				.col-md-6
+				.col-md-10.col-md-offset-1
+					ul.general-list.general-list-white.general-list-plan
+						li Предварительный урок. Классификация колод. Техника безопасности. Практика Денежный потолок. Игра. Препятствия и возможности.
+						li Формирование штампа судьбы. Как формируется судьба человека.
+						li Саботаж. Вторичные выгоды неудач. Почему нам «выгодно» проживать проблемы
+						li Ролевые игры в&nbsp;паре. Треугольник «Тиран-Жертва-Спасатель»
+						li Мужчина по&nbsp;судьбе/под задачу. Что влияет на&nbsp;наш выбор партнера
+						li Ответы на&nbsp;часто задаваемые вопросы.
+						li Любовный треугольник. Завершение прошлых связей. Манипуляции. Виды и принципы манипулятивных игр.
+						li Личные границы. Кто есть Я? Как формируется наша идентичность.
+						li Денежный потолок. Работа с&nbsp;денежной составляющей. Как формируются деньги в&nbsp;нашем пространстве.
+						li Проработка причин, влияющих на&nbsp;низкий уровень финансов. Провальные финансовые стратегии.
+						li Дополнительный урок    Закрытый тренинг для&nbsp;учеников Жанны Абрамовой
+						li Мнемотехники (как быстрее и эффективнее усваивать материал). Ответы на&nbsp;часто задаваемые вопросы
+						li Травмы детства. Исцеление детского страха.
+						li Принцип отправной точки травм. Где и когда сформировались истинные причины наших проблем. Психосоматозы (болезни, основанные на&nbsp;психотравме)
+						li Родительско-детские конфликты. Жизнь подростка. Травмы пубертатного периода, влияющие на&nbsp;формирование судьбы. Созависимость. Симбиоз. Сепарация.
+						li Повторение маминой судьбы. Зачем мы живем? Коллаж болезней. Принцип метафизики (заболеваний).
+						li Основные законы функционирования семейных систем.
+						li Блоки, влияющие на&nbsp;судьбу. Слепые пятна. Воронки
+						li Работа с&nbsp;родовыми блоками. Фразы расколдовыватели
+						li Инцест. Аборт.
+						li Причины возникновения бесплодия. Закрытие абортированного поля.
+						li Системно-родовая терапия в&nbsp;работе с&nbsp;отношениями.
+						li Деньги в&nbsp;паре
+						li Бедность как&nbsp;ресурс. Ключ к&nbsp;деньгам в&nbsp;паре.
+						li Долги и кредиты.
+						li Бизнес
+						li Работа с&nbsp;травмой
+						li Исцеление травм
+						li Работа с&nbsp;заболеваниями
+						li Нерожденные дети
+						li Выстраивание системного поля
+						li Техники исцеления ДНК
+						li Нейтрализация деструктивных программ
+						li Основы инфобизнеса. Целевая аудитория. Робота с&nbsp;продуктом
+						li Типажи. Особенности типажей. Точка входа в&nbsp;типажный голод
+						li Написание программы тренинга. Подготовка квеста/марафона
+						li Учимся простраивать причино-следственную связь проблематики через квест/марафон
+						li Тренировка составления программы: от&nbsp;мысли до&nbsp;проведения тренинга. Пошаговая инструкция для&nbsp;нейтрализации симптома (страха)
+						li Работа с&nbsp;фобиями. Техники МАК: Лояльность к&nbsp;системе, Кармические задачи
+						li Поиск СКО (отправной точки)
+						li Исцеление шаблона: Восстановление силы
+						li Работа с&nbsp;провальными инстинктами
+						li Работа с&nbsp;физическими симптомами
+						li Коуч сессия
+						li Коуч сессия — работа с&nbsp;саботажем
+						li Работа с&nbsp;саботажем
+						li Инфобизнес
+						li Составление программы продающего мастер класса
+						li Как проводить продающий мастер класс
+						li Продажи на&nbsp;вебинарах
+						li Подготовка к&nbsp;запуску МК и платного курса
+						li Составление своих авторских техник работы с&nbsp;МАК
+						li Работа с&nbsp;клиентом по&nbsp;моделированию жизни. Присоединение и ведение клиента
+						li Демо-сессия по&nbsp;технике Квантовый скачок из&nbsp;проблемы в&nbsp;ресурсное состояние
+						li Технология антикризис. Работа с&nbsp;клиентом по&nbsp;запросу о&nbsp;деньгах. Денежный уровень человека
+						li Новые тенденции написания тренингов в&nbsp;период кризиса
+	section#plan-filling
+		.container
+			.row
+				.col-md-5
+					h4.general-title.general-title-plan-filling
+						span В&nbsp;обучение входит
+				.col-md-7
 					.plan-filling-info
-						ul.general-list
+						ul.plan-filling-info-list
 							li 53&nbsp;урока
 							li закрытый чат курса
 							li тьютор (персональный наставник)
