--- a/_app/pug/course/4-prices.pug
+++ b/_app/pug/course/4-prices.pug
@@ -1,6 +1,7 @@
 section#prices
 	.container
-		+gt('', 'Стоимость курса')
+		h3.general-title
+			span Стоимость курса
 		.packets
 			.packet
 				.packet-head
