--- a/_app/styl/course.min.styl
+++ b/_app/styl/course.min.styl
@@ -1,18 +1,19 @@
 @import 'base/1-fonts-course'
 
 @import '../_css/bootstrap.min.css'
-// @import '../_css/slick.css'
-// @import '../_css/slick-theme.css'
-// @import '../_css/jquery.fancybox.min.css'
+@import '../_css/slick.css'
+@import '../_css/slick-theme.css'
+@import '../_css/jquery.fancybox.min.css'
 
 @import 'base/2-base-course'
 
 @import 'base/3-header-course'
 @import 'course/1-main'
-@import 'course/2-plan'
-@import 'course/3-prices'
-@import 'main/6-author'
-@import 'main/7-revs'
+@import 'course/2-for'
+@import 'course/3-plan'
+@import 'course/4-prices'
+@import 'course/5-author'
+@import 'course/6-revs'
 @import 'base/4-footer-course'
 // .mobile-menu
 // 	display: none;
