--- a/_app/pug/base/2-footer-course.pug
+++ b/_app/pug/base/2-footer-course.pug
@@ -2,7 +2,7 @@ footer
 	.container
 		.footer-main
 			a(href="https://iomp.ru", target="_blank")
-				img.footer-logo(src=path+"img/images/logo-white.svg", alt="Логотип")
+				img.footer-logo(src=path+"img/images/logo-1.svg", alt="Логотип")
 			.footer-info
 				.footer-info-item
 					p 125315, г. Москва, пр-кт Ленинградский, д. 68, стр. 24, эт/пом/ком 2/IV/20
