--- a/_app/styl/base/2-base-course.styl
+++ b/_app/styl/base/2-base-course.styl
@@ -3,15 +3,11 @@
 	padding 0
 	outline none
 body
-	font-size: 16px
+	font-size: 18px
 	font-family: I
-	color #000
-	background-color #fff
-	line-height: 1.56
-	@media screen and (max-width 650px)
-		font-size: 22px
-	@media screen and (max-width 480px)
-		font-size: 18px
+	color #fff
+	background-color #000
+	line-height: 1.3
 .wrapper
 	overflow hidden
 .content
@@ -70,27 +66,20 @@ footer
 		cursor pointer
 		margin 0 auto
 .button
-	display inline-block
+	display block
 	text-align center
-	margin 0
+	margin 0 auto
 	text-decoration none
 	color: #fff
-	width: auto
-	font-size: 18px
+	width: 100%
+	max-width 391px
+	font-size: 26px
 	font-weight: bold
-	padding: 16px 54px
-	background-color: #C77E55
-	border-radius: 15px
-	@media screen and (max-width 991px)
-		width 100%
-		max-width 550px
-		margin 0 auto
-		display block
-	@media screen and (max-width 650px)
-		font-size: 22px
-		padding 25px 20px
-	@media screen and (max-width 480px)
-		font-size: 18px
+	padding: 27px
+	background-color: #C6F9DC
+	background-image: linear-gradient(22deg, #C6F9DC 0%, #4E97B6 100%)
+	border-radius: 42px
+	line-height: 1
 	&:focus
 		text-decoration none
 		color #fff
@@ -98,45 +87,29 @@ footer
 		text-decoration none
 		color #fff
 .general-title
-	font-family: FSE
-	font-size: 36px
-	margin-bottom: 80px
-	color #73431F
+	font-family: S
+	font-size: 60px
+	margin-bottom: 60px
+	color #000
 	line-height: 1.3
-	@media screen and (max-width 480px)
-		font-size: 30px
-		margin-bottom: 50px
-	@media screen and (max-width 386px)
-		font-size: 26px
+	&-white
+		color #fff
+	span
+		color #40BDAE
 .mob-none
 	@media screen and (max-width 991px)
 		display none
-.general-subtitle
-	font-size: 18px
-	margin: 60px 0 20px
+.d-none
+	display none
 	@media screen and (max-width 991px)
-		text-align center
-	@media screen and (max-width 425px)
-		margin-top: 45px
-		line-height: 1.1
-		&-main
-			margin-top: 20px
-			font-size: 16px
-	span
 		display block
-		color #77CEB4
-		font-weight: bold
-		text-transform uppercase
-		&.gs-brown
-			color #C77E55
 .general-list
-	margin-left: 30px
-	@media screen and (max-width 386px)
-		margin-left: 15px
+	margin-left: 18px
 	li
-		position relative
-		margin-bottom: 15px
+		margin-bottom: 20px
 		span
 			font-weight: bold
 		&:last-child
 			margin-bottom: 0
+	&-black
+		color #000
