--- a/_app/styl/base/4-footer-course.styl
+++ b/_app/styl/base/4-footer-course.styl
@@ -2,6 +2,8 @@ footer
 	padding 40px 0
 	font-size: 13px
 	height: auto
+	// background-color: #000
+	color #fff
 	@media screen and (max-width 991px)
 		padding: 40px 0 35px
 	a
@@ -10,11 +12,11 @@ footer
 			color #000
 	.&-logo
 		width 113px
-		color #000
+		// color #000
 	.&-main
 		padding 23px 0 32px
-		border-top: 1px solid #000
-		border-bottom: 1px solid #000
+		border-top: 1px solid #fff
+		border-bottom: 1px solid #fff
 	.&-info
 		margin-top: 25px
 		display flex
@@ -22,6 +24,14 @@ footer
 		justify-content: space-between
 		p
 			margin-bottom: 5px
+			color #fff
+			a
+				color #fff
+				&:focus
+					color #fff
+				&:hover
+					color #fff
+					text-decoration underline
 		@media screen and (max-width 991px)
 			display block
 			margin-top: 0
@@ -31,6 +41,12 @@ footer
 	.&-links
 		margin-top: 15px
 		a
+			color #fff
 			margin-right: 5px
 			display inline-block
 			margin-bottom: 5px
+			&:focus
+				color #fff
+			&:hover
+				color #fff
+				text-decoration underline
