--- a/_app/styl/course/1-main.styl
+++ b/_app/styl/course/1-main.styl
@@ -1,29 +1,22 @@
 #main
-	padding 0 0 60px
-	color #73431F
+	padding 0 0 260px
+	background: #000 url(../img/backs/main-course.png) no-repeat center
+	background-size: cover
+	color:  #fff
+	text-align center
+	margin-bottom: -60px
+	position relative
+	z-index 40
 .main
 	&-pre
 		font-size: 28px
-		display inline-block
-		border-bottom: 2px solid #55B196
-		padding-bottom: 5px
-		margin-top: 100px
-		color #55B196
-		@media screen and (max-width 991px)
-			margin-top: 0
-			font-size: 22px
-		@media screen and (max-width 650px)
-			font-size: 20px
-		@media screen and (max-width 550px)
-			padding-bottom: 0
-			padding-top: 5px
-		// @media screen and (max-width 425px)
-		// 	font-size: 14px
 	&-title
-		font-family: I
-		font-size: 28px
-		text-transform none
-		margin 10px 0 50px
+		font-family: S
+		font-size: 80px
+		font-weight: bold
+		text-transform uppercase
+		color #C6F9DC
+		margin 30px 0 35px
 		line-height: 1.1
 		@media screen and (max-width 1199px)
 			font-size: 22px
@@ -39,25 +32,13 @@
 		@media screen and (max-width 425px)
 			color #000
 			font-size: 14px
+	&-subtitle
+		font-size: 28px
+		margin: 0 auto 40px
+		width 100%
+		max-width 750px
 		span
-			font-family: FSE
-			font-size: 48px
-			text-transform uppercase
-			position relative
-			display block
-			&:first-of-type
-				padding-top: 5px
-				left -30px
-				@media screen and (max-width 1199px)
-					left -20px
-				@media screen and (max-width 650px)
-					left 0
-			@media screen and (max-width 1199px)
-				font-size: 38px
-			@media screen and (max-width 650px)
-				font-size: 30px
-			@media screen and (max-width 425px)
-				font-size: 24px
+			font-weight: bold
 	// &-date
 	// 	font-size: 24px
 	// 	font-weight: 900
@@ -157,75 +138,3 @@
 	// 			font-size: 16px
 	// 		span
 	// 			font-weight: bold
-	&-img
-		position absolute
-		top 0
-		right 0
-		z-index -1
-		@media screen and (max-width 991px)
-			width 45%
-		@media screen and (max-width 650px)
-			display none
-		&-mob
-			display none
-			@media screen and (max-width 650px)
-				display block
-				position relative
-				width 100%
-				margin 0 auto 50px
-				z-index -1
-				height: 460px
-				object-fit: none
-				object-position: top left
-			@media screen and (max-width 550px)
-				display none
-		&-mob-2
-			display none
-			@media screen and (max-width 550px)
-				display block
-				position relative
-				width 550px
-				margin 0 auto 50px
-				z-index -1
-				height: 460px
-				object-fit: cover
-				object-position: top left
-			@media screen and (max-width 425px)
-				height: 380px
-.mob-img-wrapper
-	@media screen and (max-width 991px)
-		display flex !important
-		flex-direction: row
-		justify-content: center
-		align-items: center
-		flex-wrap: nowrap
-		position absolute
-		top 50px
-		left 0
-		right 0
-		margin 0 auto
-	@media screen and (max-width 650px)
-		min-height: 397px
-		top 40px
-.general-subtitle-main
-	font-size: 18px
-	margin-top: 40px
-	// @media screen and (max-width 550px)
-	// 	margin-top: 25px
-	span
-		text-transform none
-		color inherit
-	@media screen and (max-width 425px)
-		margin-top: 15%
-	@media screen and (max-width 386px)
-		margin-top: 12%
-.main-info
-	position relative
-.button-main
-	@media screen and (max-width 991px)
-		margin-left: 0
-		max-width 300px
-		position relative
-		z-index 999
-	@media screen and (max-width 650px)
-		margin-top: 100px
