--- a/_app/styl/base/1-fonts-course.styl
+++ b/_app/styl/base/1-fonts-course.styl
@@ -39,14 +39,14 @@ S = 'Segoe', sans-serif;
 @font-face
 	font-family: 'Segoe';
 	font-display: fallback;
-	font-weight: normal;
+	font-weight: bold;
 	font-style: normal;
 	src: url('../fonts/SegoeBold.eot');
 	src: url('../fonts/SegoeBold.eot') format('embedded-opentype'),url('../fonts/SegoeBold.woff2') format('woff2'),url('../fonts/SegoeBold.woff') format('woff'),url('../fonts/SegoeBold.ttf') format('truetype'),url('../fonts/SegoeBold.svg#SegoeBold') format('svg');
 @font-face
 	font-family: 'Segoe';
 	font-display: fallback;
-	font-weight: normal;
+	font-weight: 900;
 	font-style: normal;
 	src: url('../fonts/SegoeBlack.eot');
 	src: url('../fonts/SegoeBlack.eot') format('embedded-opentype'),url('../fonts/SegoeBlack.woff2') format('woff2'),url('../fonts/SegoeBlack.woff') format('woff'),url('../fonts/SegoeBlack.ttf') format('truetype'),url('../fonts/SegoeBlack.svg#SegoeBlack') format('svg');
