--- a/_app/pug/course/5-author.pug
+++ b/_app/pug/course/5-author.pug
@@ -4,18 +4,29 @@ section#author
 			.col-md-6.col-md-push-6
 				h4.author-title.d-none
 					small Спикер
-					| Жанна Абрамова
+					span Жанна Абрамова
 				.author-img
 					+img('','img/images/janna-course.png', 'Жанна Абрамова')
 					p.author-img-text SKOLKOVO TECH & INNOVATION Awards 2023 в&nbsp;номинации: «Лучший бизнес расстановщик года».
 			.col-md-6.col-md-pull-6
-				h4.author-title.mob-none
+				h4.general-title.general-title-author.mob-none
 					small Спикер
-					| Жанна Абрамова
+					span Жанна Абрамова
 				ul.general-list
-					li Психотерапевт, клинический психолог
-					li Более 15 лет практической работы
-					li Более 10 000 выпускников окончивших курсы и обучающие программы
-					li Эксперт федеральных каналов
-					li Ведущий преподаватель “Института современной психологии”
-					li Коуч, тренер обучающих и трансформационных программ
+					li
+						span Психотерапевт, клинический психолог
+					li
+						span Более 15 лет
+						|  практической работы
+					li
+						span Более 10 000
+						|  выпускников окончивших курсы и обучающие программы
+					li
+						span Эксперт
+						|  федеральных каналов
+					li
+						span Ведущий преподаватель
+						|  “Института современной психологии”
+					li
+						span Коуч, тренер
+						|  обучающих и трансформационных программ
