--- a/_app/styl/course/4-prices.styl
+++ b/_app/styl/course/4-prices.styl
@@ -1,7 +1,123 @@
 #prices
-	padding 200px 0
+	padding 260px 0
 	border-radius: 58px 58px 0 0
 	margin-bottom: -60px
 	position relative
 	z-index 43
 	background-color #fff
+.packet
+	&s
+		position relative
+		display flex
+		flex-direction: row
+		align-items: flex-start
+		justify-content: space-between
+	width 100%
+	max-width 540px
+	text-align center
+	&-head
+		background-color: #000
+		border-radius: 69px 69px 0 0
+		padding 30px 30px 73px
+		margin-bottom: -42px
+		&-title
+			font-family: S
+			font-size: 60px
+			font-weight: normal
+			small
+				display block
+				font-family: I
+				font-size: 28px
+	&-body
+		border-radius: 42px
+		background-color: #DFF4FD
+		color #000
+		padding: 95px 45px 45px
+	&-or
+		display flex
+		align-items: center
+		justify-content: center
+		width 140px
+		text-align center
+		position absolute
+		top 280px
+		left 0
+		right 0
+		margin 0 auto
+		font-family: S
+		font-size: 40px
+		font-weight: 900
+		background-color: #000
+		border-radius: 30px
+		padding 0 22px 12px
+		line-height: 1
+		height: 87px
+.cost
+	font-family: S
+	font-weight: 900
+	&-sale
+		font-size: 90px
+	&-full
+		color #4E97B6
+		font-size: 40px
+		margin-bottom: 90px
+		span
+			text-decoration line-through
+	&-text
+		font-size: 28px
+		text-transform uppercase
+		margin 35px 0 45px
+.button-cost
+	background-image: none
+	background-color: #40BDAE
+.prices-text
+	text-align center
+	font-size: 28px
+	margin 135px 0
+	color #000
+	span
+		display inline-block
+		font-weight: bold
+		background-color: #000
+		color #fff
+		border-radius: 42px
+		padding: 13px 10px
+.instalment
+	padding 60px 70px 30px
+	background-color: #DFF4FD
+	background-image: linear-gradient(31deg, #DFF4FD 0%, #C6F9DC 100%)
+	border-radius: 69px
+	display flex
+	flex-direction: row
+	align-items: center
+	justify-content: space-between
+	color #000
+	.instalment-col-1
+		width 53%
+	.instalment-col-2
+		width 44%
+	&-title
+		font-family: S
+		font-size: 56px
+		font-weight: bold
+		margin-bottom: 50px
+	&-list
+		li
+			font-size: 28px
+			list-style: none
+			padding-left: 30px
+			margin-bottom: 25px
+			background: url(../img/icons/list-arrow.svg) no-repeat top 9px left
+			&:last-child
+				margin-bottom: 0
+	&-img
+		display block
+		margin 50px auto
+	&-text
+		border-radius: 55px
+		border: 3px solid #40BDAE
+		padding: 20px 45px 30px
+		font-size: 28px
+		color #40BDAE
+		span
+			font-weight: bold
