--- a/_app/styl/course/6-revs.styl
+++ b/_app/styl/course/6-revs.styl
@@ -1,24 +1,28 @@
 #revs
-	padding 90px 0 0
-	background-color: #CCEDE3
+	padding 200px 0
+	border-radius: 58px 58px 0 0
+	position relative
+	z-index 45
+	background-color: #000
 	@media screen and (max-width 650px)
 		padding 60px 0
 .revs-slider-text
-	width 88%
+	// width 88%
 	margin 0 auto
 	@media screen and (max-width 767px)
 		width 100%
-.slick-list
-	border-radius: 15px
+// .slick-list
+// 	border-radius: 15px
 .text-rev-img
-	height: 200px
+	height: 400px
 	object-fit: contain
 	object-position: center
-	width 480px
-	background-color #ECF3F3
+	width 320px
+	background-color #D9D9D9
 	border-radius: 15px
 	display block
 	margin: 0 auto
+	// padding 0 10px
 	@media screen and (max-width 626px)
 		width 400px
 	@media screen and (max-width 535px)
@@ -52,11 +56,3 @@
 	&:focus
 	&:hover
 		background-image: url(../img/icons/prev.svg)
-#last
-	padding: 0 0 90px
-	background-color: #CCEDE3
-	@media screen and (max-width 650px)
-		padding 0 0 90px
-		background-color #fff
-	@media screen and (max-width 480px)
-		padding 0 0 60px
