--- a/css/course.css
+++ b/css/course.css
@@ -41,7 +41,7 @@
 @font-face {
   font-family: 'Segoe';
   font-display: fallback;
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal;
   src: url("../fonts/SegoeBold.eot");
   src: url("../fonts/SegoeBold.eot") format('embedded-opentype'), url("../fonts/SegoeBold.woff2") format('woff2'), url("../fonts/SegoeBold.woff") format('woff'), url("../fonts/SegoeBold.ttf") format('truetype'), url("../fonts/SegoeBold.svg#SegoeBold") format('svg');
@@ -49,7 +49,7 @@
 @font-face {
   font-family: 'Segoe';
   font-display: fallback;
-  font-weight: normal;
+  font-weight: 900;
   font-style: normal;
   src: url("../fonts/SegoeBlack.eot");
   src: url("../fonts/SegoeBlack.eot") format('embedded-opentype'), url("../fonts/SegoeBlack.woff2") format('woff2'), url("../fonts/SegoeBlack.woff") format('woff'), url("../fonts/SegoeBlack.ttf") format('truetype'), url("../fonts/SegoeBlack.svg#SegoeBlack") format('svg');
@@ -832,16 +832,211 @@ header {
   left: 0;
 }
 #prices {
-  padding: 200px 0;
+  padding: 260px 0;
   border-radius: 58px 58px 0 0;
   margin-bottom: -60px;
   position: relative;
   z-index: 43;
   background-color: #fff;
 }
+.packet {
+  width: 100%;
+  max-width: 540px;
+  text-align: center;
+}
+.packets {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.packet-head {
+  background-color: #000;
+  border-radius: 69px 69px 0 0;
+  padding: 30px 30px 73px;
+  margin-bottom: -42px;
+}
+.packet-head-title {
+  font-family: 'Segoe', sans-serif;
+  font-size: 60px;
+  font-weight: normal;
+}
+.packet-head-title small {
+  display: block;
+  font-family: 'Inter', sans-serif;
+  font-size: 28px;
+}
+.packet-body {
+  border-radius: 42px;
+  background-color: #dff4fd;
+  color: #000;
+  padding: 95px 45px 45px;
+}
+.packet-or {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 140px;
+  text-align: center;
+  position: absolute;
+  top: 280px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  font-family: 'Segoe', sans-serif;
+  font-size: 40px;
+  font-weight: 900;
+  background-color: #000;
+  border-radius: 30px;
+  padding: 0 22px 12px;
+  line-height: 1;
+  height: 87px;
+}
+.cost {
+  font-family: 'Segoe', sans-serif;
+  font-weight: 900;
+}
+.cost-sale {
+  font-size: 90px;
+}
+.cost-full {
+  color: #4e97b6;
+  font-size: 40px;
+  margin-bottom: 90px;
+}
+.cost-full span {
+  text-decoration: line-through;
+}
+.cost-text {
+  font-size: 28px;
+  text-transform: uppercase;
+  margin: 35px 0 45px;
+}
+.button-cost {
+  background-image: none;
+  background-color: #40bdae;
+}
+.prices-text {
+  text-align: center;
+  font-size: 28px;
+  margin: 135px 0;
+  color: #000;
+}
+.prices-text span {
+  display: inline-block;
+  font-weight: bold;
+  background-color: #000;
+  color: #fff;
+  border-radius: 42px;
+  padding: 13px 10px;
+}
+.instalment {
+  padding: 60px 70px 30px;
+  background-color: #dff4fd;
+  background-image: linear-gradient(31deg, #dff4fd 0%, #c6f9dc 100%);
+  border-radius: 69px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #000;
+}
+.instalment .instalment-col-1 {
+  width: 53%;
+}
+.instalment .instalment-col-2 {
+  width: 44%;
+}
+.instalment-title {
+  font-family: 'Segoe', sans-serif;
+  font-size: 56px;
+  font-weight: bold;
+  margin-bottom: 50px;
+}
+.instalment-list li {
+  font-size: 28px;
+  list-style: none;
+  padding-left: 30px;
+  margin-bottom: 25px;
+  background: url("../img/icons/list-arrow.svg") no-repeat top 9px left;
+}
+.instalment-list li:last-child {
+  margin-bottom: 0;
+}
+.instalment-img {
+  display: block;
+  margin: 50px auto;
+}
+.instalment-text {
+  border-radius: 55px;
+  border: 3px solid #40bdae;
+  padding: 20px 45px 30px;
+  font-size: 28px;
+  color: #40bdae;
+}
+.instalment-text span {
+  font-weight: bold;
+}
+#author {
+  background-color: #fff;
+  padding: 0 0 260px;
+  margin-bottom: -60px;
+  position: relative;
+  z-index: 44;
+  color: #000;
+}
+.author-img {
+  position: relative;
+}
+.author-img-text {
+  color: #fff;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0 45px 45px;
+  width: 100%;
+  max-width: 470px;
+}
+.general-title-author small {
+  display: block;
+  margin: 50px 0 40px;
+  font-family: 'Inter', sans-serif;
+  font-weight: normal;
+  font-size: 28px;
+}
 #revs {
-  padding: 90px 0 0;
-  background-color: #ccede3;
+  padding: 200px 0;
+  border-radius: 58px 58px 0 0;
+  position: relative;
+  z-index: 45;
+  background-color: #000;
 }
 @media screen and (max-width: 650px) {
   #revs {
@@ -849,7 +1044,6 @@ header {
   }
 }
 .revs-slider-text {
-  width: 88%;
   margin: 0 auto;
 }
 @media screen and (max-width: 767px) {
@@ -857,17 +1051,14 @@ header {
     width: 100%;
   }
 }
-.slick-list {
-  border-radius: 15px;
-}
 .text-rev-img {
-  height: 200px;
+  height: 400px;
   -o-object-fit: contain;
      object-fit: contain;
   -o-object-position: center;
      object-position: center;
-  width: 480px;
-  background-color: #ecf3f3;
+  width: 320px;
+  background-color: #d9d9d9;
   border-radius: 15px;
   display: block;
   margin: 0 auto;
@@ -930,21 +1121,6 @@ header {
 .slick-prev:focus,
 .slick-prev:hover {
   background-image: url("../img/icons/prev.svg");
-}
-#last {
-  padding: 0 0 90px;
-  background-color: #ccede3;
-}
-@media screen and (max-width: 650px) {
-  #last {
-    padding: 0 0 90px;
-    background-color: #fff;
-  }
-}
-@media screen and (max-width: 480px) {
-  #last {
-    padding: 0 0 60px;
-  }
 }
 footer {
   padding: 40px 0;
